syntax = "proto3";

package calculator;

option go_package = "github.com/RichardRivaldo/grpc-go/calculator/proto";

message AverageRequest {
    int64 number = 1;
}

message AverageResponse {
    float average = 1;
}