syntax = "proto3";

package calculator;

option go_package = "github.com/RichardRivaldo/grpc-go/calculator/proto";

message PrimeRequest {
    int32 number = 1;
}

message PrimeResponse {
    int32 prime = 1;
}