syntax = "proto3";

package calculator;

option go_package = "github.com/RichardRivaldo/grpc-go/calculator/proto";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum = 1;
}
